Fix contrast (attempt 1000)

--- a/css/_variables.less
+++ b/css/_variables.less
@@ -1,8 +1,9 @@
-@fontFamily: -apple-system, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;
-@headerFontFamily: 'Oswald', arial narrow, sans-serif;
+@fontFamily: -apple-system, system-ui, "Helvetica Neue", Helvetica, Arial,
+  sans-serif;
+@headerFontFamily: "Oswald", arial narrow, sans-serif;
 
-@bright: #3d7105;
-@dark: #3B6106;
+@bright: #558000;
+@dark: #3b6106;
 
 @backgroundColor: #fff;
 @textColor: #222;
@@ -13,6 +14,6 @@
 @mastheadTextColor: @backgroundColor;
 
 @contentBackgroundColor: #fff;
-@contentBoxShadow: rgba(0, 0, 0, .05);
+@contentBoxShadow: rgba(0, 0, 0, 0.05);
 
 @footerBackgroundColor: #fff;
